--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/Search.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/Search.cshtml
@@ -13,31 +13,31 @@
         {
             if (item.FullName != null)
             {
-               <dt>@Html.ActionLink(item.FullName, "OthersNameCard", "NameCard", new { id = item.UserName}) </dt> 
+               <dt class="follow-list">@Html.ActionLink(item.FullName, "OthersNameCard", "NameCard", new { id = item.UserName}) </dt>
             }
             else
             {
-                <dt>@Html.ActionLink(item.UserName, "OthersNameCard", "NameCard", new { id = item.UserName}) </dt>
-            } 
+                <dt class="follow-list">@Html.ActionLink(item.UserName, "OthersNameCard", "NameCard", new { id = item.UserName }) </dt>
+            }
         }
     </dl>
     <dl>
         @if (Model.SearchResultsUsers.Count() == 0)
+{
+}
+else
+{
+    foreach (var item in Model.SearchResultsUsers)
+    {
+        if (item.FullName != null)
         {
+            <dt class="follow-list">@Html.ActionLink(item.FullName, "OthersNameCard", "NameCard", new { id = item.UserName }) </dt>
         }
         else
         {
-            foreach (var item in Model.SearchResultsUsers)
-            {
-                if (item.FullName != null)
-                {
-                <dt>@Html.ActionLink(item.FullName, "OthersNameCard", "NameCard", new { id = item.UserName}) </dt> 
-                }
-                else
-                {
-                    <dt>@Html.ActionLink(item.UserName, "OthersNameCard", "NameCard", new { id = item.UserName}) </dt>
-                }
-            }
+            <dt class="follow-list">@Html.ActionLink(item.UserName, "OthersNameCard", "NameCard", new { id = item.UserName }) </dt>
         }
+    }
+}
    </dl>
 
