--- a/SozialWebApplication/SozialWebApplication/Views/Home/SearchGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/SearchGroups.cshtml
@@ -4,44 +4,48 @@
     <div class="searching">
         <input type="text" id="search" name="search" class="search" placeholder="Search ..." />
         <div class="button">
-            <a href="SearchGroups"><input type="submit" class="search-button" /></a>
+            <a href="SearchGroups"><input type="submit" value=" " name="submit" class="search-button" /></a>
         </div>
     </div>
 }
-<h4>My Groups</h4>
-<dl>
-    @foreach (var item in Model.AllUserGroups)
-    {
-        if (item.GroupName != null)
-        {
-            <dt class="search-groups-list">@Html.ActionLink(item.GroupName, "NewsfeedGroups", "Home", new { id = item.Id }) </dt>
-        }
-    }
-</dl>
-<h4>All Groups</h4>
-<dl>
-    @foreach (var item in Model.AllGroups)
-{
-    if (item.GroupName != null)
-    {
-        <dt class="search-groups-list">@Html.ActionLink(item.GroupName, "NewsfeedGroups", "Home", new { id = item.Id }) </dt>
-    }
-}
-</dl>
-<h4>Search results</h4>
-<dl>
-    @if (Model.SearchResultsGroups.Count() == 0)
-{
-}
-else
-{
-    foreach (var item in Model.SearchResultsGroups)
-    {
-        if (item.GroupName != null)
-        {
-            <dt class="search-groups-list">@Html.ActionLink(item.GroupName, "NewsfeedGroup", "Home", new { id = item.Id }) </dt>
-        }
-    }
-}
-</dl>
 
+<div class="all-groups">
+    <h4 class="my-groups-label">My Groups</h4>
+    <dl>
+        @foreach (var item in Model.AllUserGroups)
+        {
+            if (item.GroupName != null)
+            {
+                <dt class="my-groups-list">@Html.ActionLink(item.GroupName, "NewsfeedGroups", "Home", new { id = item.Id }) </dt>
+            }
+        }
+    </dl>
+
+    <h4 class="all-groups-label">All Groups</h4>
+    <dl>
+        @foreach (var item in Model.AllGroups)
+        {
+            if (item.GroupName != null)
+            {
+                <dt class="all-groups-list">@Html.ActionLink(item.GroupName, "NewsfeedGroups", "Home", new { id = item.Id }) </dt>
+            }
+        }
+    </dl>
+
+    <h4 class="search-groups-label">Search results</h4>
+    <dl>
+        @if (Model.SearchResultsGroups.Count() == 0)
+        {
+        }
+        else
+        {
+            foreach (var item in Model.SearchResultsGroups)
+            {
+                if (item.GroupName != null)
+                {
+                    <dt class="search-groups-list">@Html.ActionLink(item.GroupName, "NewsfeedGroup", "Home", new { id = item.Id }) </dt>
+                }
+            }
+        }
+    </dl>
+</div>
