--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/Search.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/Search.cshtml
@@ -4,38 +4,43 @@
     <div class="searching">
         <input type="text" id="search" name="search" class="search" placeholder="Search ..." />
         <div class="button">
-            <a href="Search"><input type="submit" class="search-button" /></a>
+            <a href="SearchGroups"><input type="submit" value=" " name="submit" class="search-button" /></a>
         </div>
     </div>
-}   <h4>All users </h4>
+    
+}  
+<div class="all-users">
+<h4 class="all-users-label">All users </h4>
     <dl>
         @foreach (var item in Model.AllUsers)
         {
             if (item.FullName != null)
             {
-               <dt>@Html.ActionLink(item.FullName, "OthersNameCard", "NameCards", new { id = item.Id }, null); </dt> 
+               <dt class="all-users-list">@Html.ActionLink(item.FullName, "OthersNameCard", "NameCards", new { id = item.Id }, null) </dt>
             }
             else
             {
-                <dt>@Html.ActionLink(item.UserName, "OthersNameCard", "NameCards", new { id = item.Id }, null); </dt>
-            } 
+                <dt class="all-users-list">@Html.ActionLink(item.UserName, "OthersNameCard", "NameCards", new { id = item.Id }, null) </dt>
+            }
         }
     </dl>
-<h4>All my friends</h4>
+
+<h4 class="my-friends-label">All my friends</h4>
 <dl>
     @foreach (var item in Model.AllFollowing)
     {
         if (item.FullName != null)
         {
-            <dt>@Html.ActionLink(item.FullName, "OthersNameCard", "NameCards", new { id = item.Id }, null); </dt>
+            <dt class="my-friends-list">@Html.ActionLink(item.FullName, "OthersNameCard", "NameCards", new { id = item.Id }, null); </dt>
         }
         else
         {
-            <dt>@Html.ActionLink(item.UserName, "OthersNameCard", "NameCards", new { id = item.Id }, null); </dt>
+            <dt class="my-friends-list">@Html.ActionLink(item.UserName, "OthersNameCard", "NameCards", new { id = item.Id }, null); </dt>
         }
     }
 </dl>
-<h4>Search results</h4>
+
+<h4 class="search-users-label">Search results</h4>
     <dl>
         @if (Model.SearchResultsUsers.Count() == 0)
         {
@@ -46,13 +51,13 @@
             {
                 if (item.FullName != null)
                 {
-                <dt>@Html.ActionLink(item.FullName, "OthersNameCard", "NameCards", new { id = item.Id }, null) </dt> 
+                <dt class="search-results-list">@Html.ActionLink(item.FullName, "OthersNameCard", "NameCards", new { id = item.Id }, null) </dt>
                 }
                 else
                 {
-                    <dt>@Html.ActionLink(item.UserName, "OthersNameCard", "NameCards", new { id = item.Id }, null) </dt>
+                    <dt class="search-results-list">@Html.ActionLink(item.UserName, "OthersNameCard", "NameCards", new { id = item.Id }, null) </dt>
                 }
             }
         }
    </dl>
-
+</div>
