--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/Search.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/Search.cshtml
@@ -4,7 +4,7 @@
     <div class="searching">
         <input type="text" id="search" name="search" class="search" placeholder="Search ..." />
         <div class="button">
-            <a href="Search"><input type="submit" class="search-button" /></a>
+            <a href="Search"><input type="button" class="search-button" /></a>
         </div>
     </div>
 }   <h4>All users </h4>
