search view nánast ready

--- a/SozialWebApplication/SozialWebApplication/Views/Home/SearchGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/SearchGroups.cshtml
@@ -9,43 +9,54 @@
     </div>
 }
 
-<div class="all-groups">
-    <h4 class="my-groups-label">My Groups</h4>
-    <dl>
-        @foreach (var item in Model.AllUserGroups)
-        {
-            if (item.GroupName != null)
-            {
-                <dt class="my-groups-list">@Html.ActionLink(item.GroupName, "NewsfeedGroups", "Home", new { id = item.Id }) </dt>
-            }
-        }
-    </dl>
+<div class="groups-lists">
 
-    <h4 class="all-groups-label">All Groups</h4>
-    <dl>
-        @foreach (var item in Model.AllGroups)
-        {
-            if (item.GroupName != null)
-            {
-                <dt class="all-groups-list">@Html.ActionLink(item.GroupName, "NewsfeedGroups", "Home", new { id = item.Id }) </dt>
-            }
-        }
-    </dl>
+    <div class="groups-labels">
+        <h4 class="my-groups-label">My Groups</h4>
+        <h4 class="all-groups-label">All Groups</h4>
+        <h4 class="search-groups-label">Search results</h4>
+    </div>
 
-    <h4 class="search-groups-label">Search results</h4>
-    <dl>
-        @if (Model.SearchResultsGroups.Count() == 0)
-        {
-        }
-        else
-        {
-            foreach (var item in Model.SearchResultsGroups)
+    <div class=" my-groups">
+        <dl>
+            @foreach (var item in Model.AllUserGroups)
             {
                 if (item.GroupName != null)
                 {
-                    <dt class="search-groups-list">@Html.ActionLink(item.GroupName, "NewsfeedGroup", "Home", new { id = item.Id }) </dt>
+                    <dt class="my-groups-list">@Html.ActionLink(item.GroupName, "NewsfeedGroups", "Home", new { id = item.Id }) </dt>
                 }
             }
-        }
-    </dl>
+        </dl>
+    </div>
+
+    <div class="all-groups">
+        <dl>
+            @foreach (var item in Model.AllGroups)
+            {
+                if (item.GroupName != null)
+                {
+                    <dt class="all-groups-list">@Html.ActionLink(item.GroupName, "NewsfeedGroups", "Home", new { id = item.Id }) </dt>
+                }
+            }
+        </dl>
+    </div>
+
+    <div class="search-groups">
+        <dl>
+            @if (Model.SearchResultsGroups.Count() == 0)
+            {
+            }
+            else
+            {
+                foreach (var item in Model.SearchResultsGroups)
+                {
+                    if (item.GroupName != null)
+                    {
+                        <dt class="search-groups-list">@Html.ActionLink(item.GroupName, "NewsfeedGroup", "Home", new { id = item.Id }) </dt>
+                    }
+                }
+            }
+        </dl>
+    </div>
+
 </div>
