--- a/SozialWebApplication/SozialWebApplication/Content/CSS/Search.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/Search.css
@@ -1,4 +1,6 @@
-﻿.search-button {
+﻿/* Search bar*/
+
+.search-button {
     background-image: url('/Myndir/search.jpg');
     border: none;
     background-repeat: no-repeat;
@@ -34,6 +36,7 @@
     font-weight: bold;
     background-image: url('/Myndir/takkar.jpg');
 }
+/*Search followers and groups - display lists*/
 
 .search-result-list, .all-groups-list, .my-groups-list, .search-results-list, .all-users-list, .my-friends-list {
     text-decoration: none;
@@ -49,67 +52,87 @@ a.visited {
     color: black;
 }
 
-.all-groups {
-    margin-bottom: 175%;
-    margin-top: 2%;
+/*Search groups */
+
+.groups-lists {
+
 }
 
-.search-groups-label {
-      margin-left: 76%;
-  margin-top: -232.5%;
-}
+.groups-labels {
 
-.search-groups-list {
-    margin-left: 60%;
-}
-
-.all-groups-label {
-      margin-left: 47%;
-  margin-top: -3%;
-}
-
-.all-groups-list {
-    margin-left: 43%;
 }
 
 .my-groups-label {
-     margin-left: 17%;
-     margin-top: 0%;
-     position: absolute;
+    margin-left: 13%;
+    margin-top: 1%;
+}
+
+.all-groups-label {
+    margin-left: 47%;
+    margin-top: -3%;
+}
+
+.search-groups-label {
+    margin-left: 79%;
+    margin-top: -3%;
+}
+
+.my-groups {
+
+}
+
+.all-groups {
+
+}
+
+.search-groups {
+ 
 }
 
 .my-groups-list {
     margin-left: 30%;
 }
 
-.all-users {
-   margin-bottom: 35%;
-   margin-top: 2%;
+.all-groups-list {
+    margin-left: 43%;
+}
+
+.search-groups-list {
+    margin-left: 60%;
+}
+
+/*Search followers*/
+
+.users-lists {
+}
+
+.users-labels {
+
 }
 
 .my-friends-label {
-    margin-left: 17%;
-  margin-top: -36%;
+    margin-left: 13%;
 }
-
-.my-friends-list {
-  margin-left: 17%;
-  margin-top: -36%;
-} 
 
 .all-users-label {
     margin-left: 47%;
+    margin-top: -3%;
 }
+
+.search-users-label {
+    margin-left: 79%;
+    margin-top: -3%;
+}
+
+.my-friends-list {
+    margin-left: 14%;
+} 
 
 .all-users-list {
     margin-left: 45%;
 } 
 
-.search-users-label {
-  margin-left: 76%;
-  margin-top: -3%;
-}
-
 .search-users-list {
-
+    margin-left: 60%;
 }
+
