--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/Search.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/Search.cshtml
@@ -7,57 +7,67 @@
             <a href="SearchGroups"><input type="submit" value=" " name="submit" class="search-button" /></a>
         </div>
     </div>
-    
 }  
-<div class="all-users">
-<h4 class="all-users-label">All users </h4>
-    <dl>
-        @foreach (var item in Model.AllUsers)
-        {
-            if (item.FullName != null)
-            {
-               <dt class="all-users-list">@Html.ActionLink(item.FullName, "OthersNameCard", "NameCards", new { id = item.Id }, null) </dt>
-            }
-            else
-            {
-                <dt class="all-users-list">@Html.ActionLink(item.UserName, "OthersNameCard", "NameCards", new { id = item.Id }, null) </dt>
-            }
-        }
-    </dl>
 
-<h4 class="my-friends-label">All my friends</h4>
-<dl>
-    @foreach (var item in Model.AllFollowing)
-    {
-        if (item.FullName != null)
-        {
-            <dt class="my-friends-list">@Html.ActionLink(item.FullName, "OthersNameCard", "NameCards", new { id = item.Id }, null); </dt>
-        }
-        else
-        {
-            <dt class="my-friends-list">@Html.ActionLink(item.UserName, "OthersNameCard", "NameCards", new { id = item.Id }, null); </dt>
-        }
-    }
-</dl>
+<div class="users-lists">
+    <div class="users-labels">
+        <h4 class="my-friends-label">All my friends</h4>
+        <h4 class="all-users-label">All users </h4>
+        <h4 class="search-users-label">Search results</h4>
+    </div>
 
-<h4 class="search-users-label">Search results</h4>
-    <dl>
-        @if (Model.SearchResultsUsers.Count() == 0)
-        {
-        }
-        else
-        {
-            foreach (var item in Model.SearchResultsUsers)
+    <div class="my-followers">
+        <dl>
+            @foreach (var item in Model.AllFollowing)
             {
                 if (item.FullName != null)
                 {
-                <dt class="search-results-list">@Html.ActionLink(item.FullName, "OthersNameCard", "NameCards", new { id = item.Id }, null) </dt>
+                    <dt class="my-friends-list">@Html.ActionLink(item.FullName, "OthersNameCard", "NameCards", new { id = item.Id }, null); </dt>
                 }
                 else
                 {
-                    <dt class="search-results-list">@Html.ActionLink(item.UserName, "OthersNameCard", "NameCards", new { id = item.Id }, null) </dt>
+                    <dt class="my-friends-list">@Html.ActionLink(item.UserName, "OthersNameCard", "NameCards", new { id = item.Id }, null); </dt>
                 }
             }
-        }
-   </dl>
+        </dl>
+    </div>
+
+    <div class="all-followers">
+        <dl>
+            @foreach (var item in Model.AllUsers)
+            {
+                if (item.FullName != null)
+                {
+                    <dt class="all-users-list">@Html.ActionLink(item.FullName, "OthersNameCard", "NameCards", new { id = item.Id }, null) </dt>
+                }
+                else
+                {
+                    <dt class="all-users-list">@Html.ActionLink(item.UserName, "OthersNameCard", "NameCards", new { id = item.Id }, null) </dt>
+                }
+            }
+        </dl>
+    </div>
+
+    <div class="search-followers">
+        <dl>
+            @if (Model.SearchResultsUsers.Count() == 0)
+            {
+            }
+            else
+            {
+                foreach (var item in Model.SearchResultsUsers)
+                {
+                    if (item.FullName != null)
+                    {
+                        <dt class="search-results-list">@Html.ActionLink(item.FullName, "OthersNameCard", "NameCards", new { id = item.Id }, null) </dt>
+                    }
+                    else
+                    {
+                        <dt class="search-results-list">@Html.ActionLink(item.UserName, "OthersNameCard", "NameCards", new { id = item.Id }, null) </dt>
+                    }
+                }
+            }
+        </dl>
+    </div>
+
 </div>
