--- a/SozialWebApplication/SozialWebApplication/Views/Home/SearchGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/SearchGroups.cshtml
@@ -1,5 +1,5 @@
 ﻿@model SozialWebApplication.Models.ViewModels.NameCardViewModel
-@using (Html.BeginForm("SearchGroups", "Home", FormMethod.Post))
+@Html.BeginForm("SearchGroups", "Home", FormMethod.Post))
 {
     <div class="searching">
         <input type="text" id="search" name="search" class="search" placeholder="Search ..." />
