--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
@@ -62,7 +62,7 @@
         event.preventDefault();
 
         $.ajax({
-            url: "/NameCards/Search",
+            url: "/Home/CheckMatch",
         }).success(function (data) {
             debugger;
             $(".feed-body").empty();
