goes to right place whoop

--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
@@ -58,7 +58,7 @@
         event.preventDefault();
 
         $.ajax({
-            url: "/NameCards/Search",
+            url: "/Home/CheckMatch",
         }).success(function (data) {
             debugger;
             $(".feed-body").empty();
