--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
@@ -1,4 +1,6 @@
 ﻿@model SozialWebApplication.Models.ViewModels.GroupViewModel
+@using SozialWebApplication.Services
+@using SozialWebApplication.Models.Entities
 @{if (Model.GroupWithId.Id == 0)
   {
     <p>News Feed</p>  
@@ -26,26 +28,34 @@
 }
 
 <div class="all-posts">
-    @foreach (var item in Model.GroupPosts)
+    @foreach (var post in Model.GroupPosts)
     {
-        <p class="post-name">@item.UserName</p>
-        <p class="post-date">@item.DateCreated</p>
+        <p class="post-name">@post.UserName</p>
+        <p class="post-date">post.DateCreated</p>
         <div class="each-post">
             <div class="post-content">
-                <p>@item.Body</p>
+                <p>@post.Body</p>
             </div>
             <div class="like">
                 <input type="button" class="like-img" />
-                <p>@item.Like</p>
+                @using (Html.BeginForm("ClickLike", "Home", FormMethod.Post))
+                {
+                    <p>#@post.Like</p>
+                    <input type="hidden" name="hidden-groupId" value="@Model.GroupWithId.Id" />
+                    <input type="hidden" name="hidden-postId" value="@post.Id" />
+                    <input type="hidden" name="hidden-like" value="add-like" />
+                    <input type="submit" value="Like" />
+                }
             </div>
-        <p class="post-comment">Comment</p>
+
+            @{List<Comment> commentsForPost = SozialWebApplication.Services.PostService.Instance.GetAllCommentsForPost(post.Id);
+              foreach(var comment in commentsForPost)
+              {
+                <p class="post-comment">@comment.Body</p>  
+              } 
+              }
         </div>
     }
-    
-
-
-    
-
 </div>
 
 
