--- a/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
@@ -138,3 +138,12 @@
   font-weight: bold;
 }
 
+.send-email > a:link{
+  color: black;
+  font-size: 25px;
+}
+
+.send-email > a:hover {
+    text-decoration:underline;
+    color: #ffd600;
+}
