--- a/SozialWebApplication/SozialWebApplication/Views/Home/Banner.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/Banner.cshtml
@@ -39,7 +39,7 @@
                  "Home",
                  new AjaxOptions { UpdateTargetId = "result" })
              <br/>-->
-            <!--<iframe src="~/NameCards/OwnNameCard"></iframe>-->
+            <iframe src="~/NameCards/OwnNameCard"></iframe>
             <!--"att"{Html.RenderPartial("att""~/NameCards/OwnNameCard");}-->   
             <!--Html.Partial("~/Views/NAmeCards/OwnNameCard.cshtml")-->
         </div>
