--- a/SozialWebApplication/SozialWebApplication/Views/Account/Login.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Account/Login.cshtml
@@ -78,14 +78,13 @@
     <img src="/Myndir/logo.jpg" class="front-logo" alt="front-logo" />
 </div>
 
-<!--
 <script>
  $(".register-button").click(function () {
     $.success(function () {
         alert("vijj")
     });
  });
- </script>-->
+ </script>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
